--- a/interfaces/citas(nuevo).ui
+++ b/interfaces/citas(nuevo).ui
@@ -6,19 +6,19 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1108</width>
-    <height>786</height>
+    <width>1100</width>
+    <height>674</height>
    </rect>
   </property>
   <property name="minimumSize">
    <size>
-    <width>1050</width>
+    <width>1100</width>
     <height>0</height>
    </size>
   </property>
   <property name="maximumSize">
    <size>
-    <width>1108</width>
+    <width>1200</width>
     <height>16777215</height>
    </size>
   </property>
@@ -266,7 +266,7 @@ QPushButton:hover{
                       <item>
                        <layout class="QHBoxLayout" name="horizontalLayout_2">
                         <item>
-                         <widget class="QLabel" name="label_2">
+                         <widget class="QLabel" name="lbl_name">
                           <property name="minimumSize">
                            <size>
                             <width>50</width>
@@ -299,7 +299,7 @@ QPushButton:hover{
                       <item>
                        <layout class="QHBoxLayout" name="horizontalLayout_3">
                         <item>
-                         <widget class="QLabel" name="label_3">
+                         <widget class="QLabel" name="lbl_apell">
                           <property name="minimumSize">
                            <size>
                             <width>50</width>
@@ -784,7 +784,7 @@ border-radius:20px;
                    </property>
                    <property name="sizeHint" stdset="0">
                     <size>
-                     <width>55</width>
+                     <width>53</width>
                      <height>20</height>
                     </size>
                    </property>
@@ -794,7 +794,7 @@ border-radius:20px;
                   <widget class="QFrame" name="frame_4">
                    <property name="minimumSize">
                     <size>
-                     <width>200</width>
+                     <width>205</width>
                      <height>0</height>
                     </size>
                    </property>
@@ -821,8 +821,8 @@ border: 2px solid rgb(0,0,0);
                         </property>
                         <property name="sizeHint" stdset="0">
                          <size>
-                          <width>20</width>
-                          <height>40</height>
+                          <width>173</width>
+                          <height>30</height>
                          </size>
                         </property>
                        </spacer>
@@ -837,7 +837,7 @@ border: 2px solid rgb(0,0,0);
                         </property>
                         <property name="maximumSize">
                          <size>
-                          <width>120</width>
+                          <width>180</width>
                           <height>50</height>
                          </size>
                         </property>
@@ -853,8 +853,8 @@ border: 2px solid rgb(0,0,0);
                         </property>
                         <property name="sizeHint" stdset="0">
                          <size>
-                          <width>20</width>
-                          <height>40</height>
+                          <width>173</width>
+                          <height>31</height>
                          </size>
                         </property>
                        </spacer>
@@ -884,7 +884,7 @@ border: 2px solid rgb(0,0,0);
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>1108</width>
+     <width>1100</width>
      <height>21</height>
     </rect>
    </property>
