.py para dogtores

--- a/interfaces/dogtores.ui
+++ b/interfaces/dogtores.ui
@@ -313,6 +313,19 @@ QPushButton:hover{
                         <item>
                          <layout class="QHBoxLayout" name="horizontalLayout_10">
                           <item>
+                           <spacer name="verticalSpacer_2">
+                            <property name="orientation">
+                             <enum>Qt::Vertical</enum>
+                            </property>
+                            <property name="sizeHint" stdset="0">
+                             <size>
+                              <width>20</width>
+                              <height>40</height>
+                             </size>
+                            </property>
+                           </spacer>
+                          </item>
+                          <item>
                            <widget class="QLabel" name="lbl_name">
                             <property name="minimumSize">
                              <size>
@@ -488,14 +501,40 @@ QPushButton:hover{
                             <item>
                              <layout class="QHBoxLayout" name="horizontalLayout_13">
                               <item>
-                               <widget class="QLabel" name="lbl_number_2">
+                               <widget class="QLabel" name="lbl_espec">
                                 <property name="text">
                                  <string>Especialidad:</string>
                                 </property>
                                </widget>
                               </item>
                               <item>
-                               <widget class="QLineEdit" name="in_number_2">
+                               <spacer name="verticalSpacer_4">
+                                <property name="orientation">
+                                 <enum>Qt::Vertical</enum>
+                                </property>
+                                <property name="sizeHint" stdset="0">
+                                 <size>
+                                  <width>20</width>
+                                  <height>40</height>
+                                 </size>
+                                </property>
+                               </spacer>
+                              </item>
+                              <item>
+                               <spacer name="horizontalSpacer_8">
+                                <property name="orientation">
+                                 <enum>Qt::Horizontal</enum>
+                                </property>
+                                <property name="sizeHint" stdset="0">
+                                 <size>
+                                  <width>40</width>
+                                  <height>20</height>
+                                 </size>
+                                </property>
+                               </spacer>
+                              </item>
+                              <item>
+                               <widget class="QLineEdit" name="in_espec">
                                 <property name="minimumSize">
                                  <size>
                                   <width>200</width>
@@ -550,14 +589,14 @@ QPushButton:hover{
                           <item>
                            <layout class="QVBoxLayout" name="verticalLayout_4">
                             <item>
-                             <widget class="QLabel" name="label">
+                             <widget class="QLabel" name="lbl_foto">
                               <property name="text">
                                <string>Cargue una foto del Doctor</string>
                               </property>
                              </widget>
                             </item>
                             <item>
-                             <widget class="QLabel" name="label_4">
+                             <widget class="QLabel" name="foto">
                               <property name="minimumSize">
                                <size>
                                 <width>200</width>
@@ -586,6 +625,19 @@ border-radius:20px;
                              </widget>
                             </item>
                            </layout>
+                          </item>
+                          <item>
+                           <spacer name="horizontalSpacer_9">
+                            <property name="orientation">
+                             <enum>Qt::Horizontal</enum>
+                            </property>
+                            <property name="sizeHint" stdset="0">
+                             <size>
+                              <width>40</width>
+                              <height>20</height>
+                             </size>
+                            </property>
+                           </spacer>
                           </item>
                           <item>
                            <spacer name="horizontalSpacer_2">
@@ -671,7 +723,7 @@ border:0px;
                      </spacer>
                     </item>
                     <item>
-                     <widget class="QPushButton" name="btn_agg_2">
+                     <widget class="QPushButton" name="btn_agg">
                       <property name="minimumSize">
                        <size>
                         <width>150</width>
@@ -703,7 +755,7 @@ border:0px;
                      </spacer>
                     </item>
                     <item>
-                     <widget class="QPushButton" name="btn_edit_2">
+                     <widget class="QPushButton" name="btn_edit">
                       <property name="minimumSize">
                        <size>
                         <width>150</width>
@@ -735,7 +787,7 @@ border:0px;
                      </spacer>
                     </item>
                     <item>
-                     <widget class="QPushButton" name="btn_clear_2">
+                     <widget class="QPushButton" name="btn_clear">
                       <property name="minimumSize">
                        <size>
                         <width>150</width>
@@ -773,14 +825,14 @@ border:0px;
                </layout>
               </item>
               <item>
-               <spacer name="verticalSpacer_5">
+               <spacer name="verticalSpacer_7">
                 <property name="orientation">
                  <enum>Qt::Vertical</enum>
                 </property>
                 <property name="sizeHint" stdset="0">
                  <size>
                   <width>20</width>
-                  <height>89</height>
+                  <height>40</height>
                  </size>
                 </property>
                </spacer>
@@ -799,9 +851,9 @@ border-radius:20px;
                 <property name="frameShadow">
                  <enum>QFrame::Raised</enum>
                 </property>
-                <layout class="QHBoxLayout" name="horizontalLayout_19">
+                <layout class="QHBoxLayout" name="horizontalLayout_2">
                  <item>
-                  <widget class="QTableWidget" name="tabla_pacientes">
+                  <widget class="QTableWidget" name="tabla_doctores">
                    <property name="minimumSize">
                     <size>
                      <width>920</width>
@@ -865,6 +917,19 @@ border-radius:20px;
                   </widget>
                  </item>
                  <item>
+                  <spacer name="horizontalSpacer_10">
+                   <property name="orientation">
+                    <enum>Qt::Horizontal</enum>
+                   </property>
+                   <property name="sizeHint" stdset="0">
+                    <size>
+                     <width>16</width>
+                     <height>20</height>
+                    </size>
+                   </property>
+                  </spacer>
+                 </item>
+                 <item>
                   <widget class="QFrame" name="frame_4">
                    <property name="styleSheet">
                     <string notr="true">QFrame{
@@ -878,40 +943,55 @@ border-radius:0px
                    <property name="frameShadow">
                     <enum>QFrame::Raised</enum>
                    </property>
-                   <layout class="QHBoxLayout" name="horizontalLayout_2">
-                    <property name="spacing">
-                     <number>0</number>
-                    </property>
-                    <property name="leftMargin">
-                     <number>0</number>
-                    </property>
-                    <property name="topMargin">
-                     <number>0</number>
-                    </property>
-                    <property name="rightMargin">
-                     <number>0</number>
-                    </property>
-                    <property name="bottomMargin">
-                     <number>0</number>
-                    </property>
+                   <layout class="QVBoxLayout" name="verticalLayout_12">
                     <item>
-                     <widget class="QPushButton" name="btn_delete_2">
-                      <property name="minimumSize">
-                       <size>
-                        <width>180</width>
-                        <height>50</height>
-                       </size>
-                      </property>
-                      <property name="maximumSize">
-                       <size>
-                        <width>120</width>
-                        <height>50</height>
-                       </size>
-                      </property>
-                      <property name="text">
-                       <string>Eliminar</string>
-                      </property>
-                     </widget>
+                     <layout class="QVBoxLayout" name="verticalLayout_11">
+                      <item>
+                       <spacer name="verticalSpacer_3">
+                        <property name="orientation">
+                         <enum>Qt::Vertical</enum>
+                        </property>
+                        <property name="sizeHint" stdset="0">
+                         <size>
+                          <width>20</width>
+                          <height>40</height>
+                         </size>
+                        </property>
+                       </spacer>
+                      </item>
+                      <item>
+                       <widget class="QPushButton" name="btn_delete">
+                        <property name="minimumSize">
+                         <size>
+                          <width>180</width>
+                          <height>50</height>
+                         </size>
+                        </property>
+                        <property name="maximumSize">
+                         <size>
+                          <width>120</width>
+                          <height>50</height>
+                         </size>
+                        </property>
+                        <property name="text">
+                         <string>Eliminar</string>
+                        </property>
+                       </widget>
+                      </item>
+                      <item>
+                       <spacer name="verticalSpacer_5">
+                        <property name="orientation">
+                         <enum>Qt::Vertical</enum>
+                        </property>
+                        <property name="sizeHint" stdset="0">
+                         <size>
+                          <width>20</width>
+                          <height>40</height>
+                         </size>
+                        </property>
+                       </spacer>
+                      </item>
+                     </layout>
                     </item>
                    </layout>
                   </widget>
@@ -923,11 +1003,6 @@ border-radius:0px
             </widget>
            </item>
           </layout>
-         </widget>
-         <widget class="QWidget" name="tab_2">
-          <attribute name="title">
-           <string>Datos academicos del doctor</string>
-          </attribute>
          </widget>
         </widget>
        </item>
